--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "accelerate>=1.12.0",
+    "bitsandbytes>=0.49.1",
     "pandas>=2.3.3",
     "protobuf>=6.33.5",
     "scikit-learn>=1.8.0",
