--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "matplotlib>=3.10.8",
     "pytest>=9.0.2",
     "ruff>=0.15.1",
+    "seaborn>=0.13.2",
 ]
 
 [tool.ruff]
